# sat_app

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  SAT App.spec  SQL Pagination  environment.yml  improvements  log.txt  outline.md  pyproject.toml  requirements.txt  test_theme.py
..bfg-report/2025-03-06/12-48-32/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
conda-recipe/: meta.yaml
conda-recipe/config/: config.json
conda-recipe/data/: sat_app.db
data/: example.json  sat_app.db
runtime-hooks/: pil_import_hook.py
sat_app/: __init__.py  main.py
sat_app/business/: __init__.py  import_export_manager.py  manager_factory.py  question_manager.py  scorer.py  settings_manager.py  worksheet_generator.py
sat_app/config/: config_manager.py
sat_app/dal/: database_manager.py  models.py  repositories.py
sat_app/rendering/: __init__.py  pdf_generator.py  safe_pillow.py
sat_app/ui/: analytics_dashboard.py  animations.py  import_export_view.py  main_window.py  question_browser.py  question_editor.py  settings_view.py  student_response_view.py  theme_manager.py  worksheet_view.py
sat_app/utils/: logger.py
tools/: SAT App.spec  build.txt  build_conda_package.bat  build_conda_package.sh  build_executable.bat  build_executable.sh  build_with_pyqt6.bat  clean_and_setup_env.py  clean_pyqt_env.py  collect-pillow.py  collect_pyqt6.py  fix_pil.py  hook-PyQt6.QtCore.py  hook-pillow.py  hook-pyqt6.py  main.spec  pyqt6_build.spec  sat_app.spec  setup.py  simple_build.bat  simple_build.sh  simple_pyqt6.spec  simple_pyqt6_spec.py  win_requirements.txt
(+6 files in other folders)
