[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sat_app"
version = "0.1.0"
authors = [
    {name = "", email = ""},
]
description = "SAT Question Bank & Worksheet Generator"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "PyQt6==6.8.1",
    "PyQt6-Qt6==6.8.2",
    "PyQt6_sip==13.10.0",
    "pillow>=11.0.0",
    "reportlab>=4.3.0",
    "pycairo>=1.27.0",
    "sympy>=1.13.0",
    "PyPDF2>=3.0.0",
]

[project.scripts]
sat_app = "sat_app.main:main"

[tool.setuptools]
packages = ["sat_app"]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.12.0",
    "pyinstaller-hooks-contrib>=2025.1",
]